[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postgwas-tools"
version = "0.0.2"
description = "A collection of tools for post-GWAS analysis and annotation"
authors = [
  { name="Antoine Dufournet", email="antoine.dufournet@cea.fr" },
]
keywords = ["GWAS", "genetics", "bioinformatics", "annotation"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
license = {file = "LICENSE"}

dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "scipy",
    "seaborn",
    "qmplot", 
    "h5py"
]

[project.urls]
Homepage = "https://github.com/Dufouranto0/postgwas-tools"
Issues = "https://github.com/Dufouranto0/postgwas-tools/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
manhattan_plot = "postgwas_tools.annot.fuma.manhattan_plot:main"
multi_plot = "postgwas_tools.annot.fuma.multi_plot:main"
QQ_plot = "postgwas_tools.annot.fuma.QQ_plot:main"

leadSNP = "postgwas_tools.annot.fuma.leadSNP:main"

extract_gencorr = "postgwas_tools.annot.ldsc.extract_gencorr:main"
extract_h2 = "postgwas_tools.annot.ldsc.extract_h2:main"

process_results_ext = "postgwas_tools.mostest.process_results_ext:main"
process_results = "postgwas_tools.mostest.process_results:main"

replication_by_rsid = "postgwas_tools.annot.replication.replication_by_rsid:main"
pairwise_dice = "postgwas_tools.annot.replication.pairwise_dice:main"
